--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,4 @@ DATABASE_URL=sqlite:///db.sqlite3
 REDIS_URL=redis://localhost:6379/0
 FRONTEND_URL=http://localhost:5173
 CORS_ALLOWED_ORIGINS=http://localhost:5173
+APPLY_REAL=False
