--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,13 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.0",
+    "lucide-react": "^0.441.0",
+    "postcss": "^8.4.45",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4",
     "vite": "^5.4.0"
   }
 }
-
